@@ -23,10 +23,6 @@ spec:
       image: maven:3.6.0-jdk-11
       command: ["cat"]
       tty: true
-      env:
-        - name: JAVA_TOOL_OPTIONS
-          value: |
-            -XX:+UseCGroupMemoryLimitForHeap
       resources:
         limits:
           cpu: 1
